# halide_python_interface

./: CMakeLists.txt  README.md  mymath.cpp  rerun_cmake.sh  setup.py  str_text.cpp
c_backend/: CMakeLists.txt  run.cpp  run.h  run_cmake.sh
